# consenser

./: README.md  pyproject.toml  setup.cfg
src/: consenser.py
src/consenser/: __init__.py  consenser.py
tests/: test_consenser.py
