[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64"]

[project]
authors = [
  {name = "Edoardo Giussani", email = "egiussani@izsvenezie.it"},
]
dependencies = [
  "click>=8.1.8",
]
description = "Create a consensus sequence from a VCF file produced by LoFreq."
dynamic = ["version"]
license = {file = "LICENSE"}
name = "consenser"
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
consenser = "consenser:cli"

[tool.setuptools.dynamic]
version = {attr = "consenser.consenser.__version__"}

[dependency-groups]
dev = [
  "pytest>=8.3.5",
]
