[metadata]
name = consenser
version = attr: consenser.consenser.__version__
author = attr: consenser.consenser.__author__
author_email = attr: consenser.consenser.__contact__
description = Creates a consensus sequence from a vcf file and a reference.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.izsvenezie.it/EdoardoGiussani/consenser

classifiers =
Programming Language :: Python :: 3
Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.6
install_requires =
    click >=8.0.0
entry_points=
    [console_scripts]
    consenser = consenser.consenser:cli
[options.packages.find]
where = src
